# claudecode_api_RemoteControl

./: .gitignore  README.md  RELEASE_NOTES_0.3.1.md  package-lock.json  package.json  server.js
app/: package-lock.json  package.json
app/src/: index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src/modules/: debug.js  dir-picker.js  image-upload.js  interactions.js  keyboard.js  model-picker.js  permissions.js  renderer.js  settings.js  state.js  toast.js  websocket.js
hooks/: bridge-approval.js  bridge-session-end.js  bridge-session-start.js  bridge-stop.js
lib/: cli.js  hooks.js  http-server.js  image-upload.js  interactive-questions.js  logger.js  pty-manager.js  state.js  transcript.js  ws-server.js
test/: test-modules.js
web/: index.html  styles.css
web/modules/: chat-cache.js  confirm.js  constants.js  hub.js  input.js  interactions.js  renderer.js  sessions.js  state.js  todo.js  utils.js  waiting.js  websocket.js
